--- a/ChitChat/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/ChitChat/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using ChitChat.Areas.Identity
 @using ChitChat.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using ChitChat.Models 
